Updating Unit Converter for Delphi XE, RAD Studio and Delphi 10 according to version for Lazarus and Free Pascal.

--- a/puma-repository-code/trunk/Unit converter/Delphi XE and RAD Studio/Test Cases for DUnit/UnitConverterTests.dproj
+++ b/puma-repository-code/trunk/Unit converter/Delphi XE and RAD Studio/Test Cases for DUnit/UnitConverterTests.dproj
@@ -66,6 +66,7 @@
         <DCC_GenerateStackFrames>true</DCC_GenerateStackFrames>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2_Win32)'!=''">
+        <VerInfo_Debug>true</VerInfo_Debug>
         <VerInfo_Keys>CompanyName=FORMATIO RETICULARIS ;FileDescription=;FileVersion=1.4.0.52;InternalName=Unit Converter 1.4.0 (Eridanus) ;LegalCopyright=© 1994 - 2016 J. W. Dietrich and collaborators;LegalTrademarks=;OriginalFilename=;ProductName=PUMA Repository;ProductVersion=1.4.0;Comments=</VerInfo_Keys>
         <VerInfo_Build>52</VerInfo_Build>
         <VerInfo_AutoIncVersion>true</VerInfo_AutoIncVersion>
