--- a/puma-repository-code/trunk/EDFplus engine/Test Cases for FPCUnit/edfplustests.lpi
+++ b/puma-repository-code/trunk/EDFplus engine/Test Cases for FPCUnit/edfplustests.lpi
@@ -6,7 +6,7 @@
     <General>
       <SessionStorage Value="InProjectDir"/>
       <MainUnit Value="0"/>
-      <Title Value="fpcunitproject1"/>
+      <Title Value="edfplustests"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
       <Icon Value="0"/>
@@ -17,7 +17,7 @@
       <MajorVersionNr Value="1"/>
       <BuildNr Value="13"/>
       <Attributes pvaDebug="True" pvaPreRelease="True"/>
-      <StringTable ProductName="PUMA EDFplus Engine" ProductVersion="1.0.0 PreAlpha"/>
+      <StringTable CompanyName="FORMATIO RETICULARIS" FileDescription="Unit Tests for EDFplus engine" InternalName="PUMA EDFplus engine 1.0.0" LegalCopyright="J. W. Dietrich, FORMATIO RETICULARIS and Ruhr University of Bochum" LegalTrademarks="PUMA Repository" ProductName="PUMA Repository" ProductVersion="1.0.0 Pre-Alpha"/>
     </VersionInfo>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
@@ -43,18 +43,18 @@
     </RequiredPackages>
     <Units Count="3">
       <Unit0>
-        <Filename Value="fpcunitproject1.lpr"/>
+        <Filename Value="edfplustests.lpr"/>
         <IsPartOfProject Value="True"/>
       </Unit0>
       <Unit1>
-        <Filename Value="testcase1.pas"/>
-        <IsPartOfProject Value="True"/>
-        <UnitName Value="EDFTestCases"/>
-      </Unit1>
-      <Unit2>
         <Filename Value="..\edfplus.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="EDFplus"/>
+      </Unit1>
+      <Unit2>
+        <Filename Value="edftestcases.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="EDFTestCases"/>
       </Unit2>
     </Units>
   </ProjectOptions>
@@ -62,7 +62,7 @@
     <Version Value="11"/>
     <PathDelim Value="\"/>
     <Target>
-      <Filename Value="fpcunitproject1"/>
+      <Filename Value="edfplustests"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
