--- a/puma-repository-code/trunk/EDFplus engine/Example_Programs/EDF Inspector/EDFInspector.lpi
+++ b/puma-repository-code/trunk/EDFplus engine/Example_Programs/EDF Inspector/EDFInspector.lpi
@@ -14,7 +14,7 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <BuildNr Value="65"/>
+      <BuildNr Value="67"/>
       <Attributes pvaDebug="True" pvaPreRelease="True"/>
       <StringTable CompanyName="FORMATIO RETICULARIS" FileDescription="EDF Inspector" InternalName="PUMA EDF Inspector 1.0.0 (Alpha Centauri)" LegalCopyright="J. W. Dietrich, FORMATIO RETICULARIS and Ruhr University of Bochum" LegalTrademarks="PUMA Repository" ProductName="EDF Inspector" ProductVersion="1.0.0 Pre-Alpha"/>
     </VersionInfo>
@@ -37,7 +37,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="4">
+    <Units Count="5">
       <Unit0>
         <Filename Value="EDFInspector.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -59,6 +59,13 @@
         <Filename Value="../../edfplus.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit3>
+      <Unit4>
+        <Filename Value="datarecordgrid.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="ValuesGridForm"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="DataRecordGrid"/>
+      </Unit4>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
