--- a/puma-repository-code/trunk/EDFplus engine/Test Cases for FPCUnit/edfplustests.lpi
+++ b/puma-repository-code/trunk/EDFplus engine/Test Cases for FPCUnit/edfplustests.lpi
@@ -74,6 +74,15 @@
       <OtherUnitFiles Value=".."/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
+    <CodeGeneration>
+      <Checks>
+        <IOChecks Value="True"/>
+        <RangeChecks Value="True"/>
+        <OverflowChecks Value="True"/>
+        <StackChecks Value="True"/>
+      </Checks>
+      <VerifyObjMethodCallValidity Value="True"/>
+    </CodeGeneration>
     <Linking>
       <Options>
         <Win32>
