--- a/puma-repository-code/trunk/EDFplus engine/Example_Programs/Test Function Generator/TestFunctionGenerator.lpi
+++ b/puma-repository-code/trunk/EDFplus engine/Example_Programs/Test Function Generator/TestFunctionGenerator.lpi
@@ -15,9 +15,9 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <BuildNr Value="74"/>
+      <BuildNr Value="76"/>
       <Attributes pvaDebug="True" pvaPreRelease="True"/>
-      <StringTable CompanyName="FORMATIO RETICULARIS" FileDescription="Test Function Generator" InternalName="PUMA EDF Test Function Generator 1.0 (Alpha Centauri)" LegalCopyright="J. W. Dietrich, FORMATIO RETICULARIS and Ruhr University of Bochum" LegalTrademarks="PUMA Repository" ProductName="Test Function Generator for EDF Engine" ProductVersion="1.0.0"/>
+      <StringTable CompanyName="FORMATIO RETICULARIS" FileDescription="Test Function Generator" InternalName="PUMA EDF Test Function Generator 1.0 (Aquila)" LegalCopyright="J. W. Dietrich, FORMATIO RETICULARIS and Ruhr University of Bochum" LegalTrademarks="PUMA Repository" ProductName="Test Function Generator for EDF Engine" ProductVersion="1.0.0"/>
     </VersionInfo>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
