--- a/EDFplus engine/Example_Programs/Test Function Generator/TestFunctionGenerator.lpi
+++ b/EDFplus engine/Example_Programs/Test Function Generator/TestFunctionGenerator.lpi
@@ -15,10 +15,9 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <MinorVersionNr Value="1"/>
-      <RevisionNr Value="1"/>
-      <BuildNr Value="91"/>
-      <StringTable CompanyName="FORMATIO RETICULARIS" FileDescription="Test Function Generator" InternalName="PUMA EDF Test Function Generator 1.1 (Ursa)" LegalCopyright="J. W. Dietrich, FORMATIO RETICULARIS and Ruhr University of Bochum" LegalTrademarks="PUMA Repository" ProductName="Test Function Generator for EDF Engine" ProductVersion="1.1.1"/>
+      <MinorVersionNr Value="2"/>
+      <BuildNr Value="94"/>
+      <StringTable CompanyName="FORMATIO RETICULARIS" FileDescription="Test Function Generator" InternalName="PUMA EDF Test Function Generator 1.2 (Hyperborea)" LegalCopyright="J. W. Dietrich, FORMATIO RETICULARIS and Ruhr University of Bochum" LegalTrademarks="PUMA Repository" ProductName="Test Function Generator for EDF Engine" ProductVersion="1.2.0"/>
     </VersionInfo>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
