--- a/Unit converter/Lazarus and FPC/Test Cases for FPCUnit/UnitConverterTests.lpi
+++ b/Unit converter/Lazarus and FPC/Test Cases for FPCUnit/UnitConverterTests.lpi
@@ -19,7 +19,7 @@
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
       <MinorVersionNr Value="5"/>
-      <BuildNr Value="49"/>
+      <BuildNr Value="50"/>
       <Attributes pvaDebug="True"/>
       <StringTable CompanyName="FORMATIO RETICULARIS " InternalName="Unit Converter 1.5.0 (Felis) " LegalCopyright="© 1994 - 2025 J. W. Dietrich and collaborators" ProductName="PUMA Repository" ProductVersion="1.5.0"/>
     </VersionInfo>
@@ -52,7 +52,7 @@
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="2"/>
         <CursorPos Y="2"/>
-        <UsageCount Value="22"/>
+        <UsageCount Value="23"/>
         <Loaded Value="True"/>
       </Unit0>
       <Unit1>
@@ -61,7 +61,7 @@
         <UnitName Value="UnitConverterTestCase"/>
         <EditorIndex Value="1"/>
         <CursorPos Y="2"/>
-        <UsageCount Value="22"/>
+        <UsageCount Value="23"/>
         <Loaded Value="True"/>
       </Unit1>
       <Unit2>
@@ -69,7 +69,8 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="UnitConverter"/>
         <IsVisibleTab Value="True"/>
-        <CursorPos X="80" Y="19"/>
+        <TopLine Value="636"/>
+        <CursorPos Y="651"/>
         <ExtraEditorCount Value="2"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -83,130 +84,130 @@
           <TopLine Value="451"/>
           <CursorPos X="41" Y="466"/>
         </ExtraEditor2>
-        <UsageCount Value="22"/>
+        <UsageCount Value="23"/>
         <Loaded Value="True"/>
       </Unit2>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="../unitconverter.pas"/>
-        <Caret Line="602" TopLine="598"/>
+        <Caret Line="647" TopLine="633"/>
       </Position1>
       <Position2>
         <Filename Value="../unitconverter.pas"/>
-        <Caret Line="620" TopLine="595"/>
+        <Caret Line="648" TopLine="633"/>
       </Position2>
       <Position3>
         <Filename Value="../unitconverter.pas"/>
-        <Caret Line="622" TopLine="595"/>
+        <Caret Line="647" TopLine="636"/>
       </Position3>
       <Position4>
-        <Filename Value="../unitconverter.pas"/>
-        <Caret Line="624" TopLine="594"/>
+        <Filename Value="unitconvertertestcase.pas"/>
+        <Caret Line="431" TopLine="415"/>
       </Position4>
       <Position5>
         <Filename Value="../unitconverter.pas"/>
-        <Caret Line="625" TopLine="598"/>
+        <Caret Line="647" TopLine="636"/>
       </Position5>
       <Position6>
         <Filename Value="../unitconverter.pas"/>
-        <Caret Line="627" TopLine="600"/>
+        <Caret Line="648" TopLine="636"/>
       </Position6>
       <Position7>
         <Filename Value="../unitconverter.pas"/>
-        <Caret Line="629" TopLine="602"/>
+        <Caret Line="661" TopLine="636"/>
       </Position7>
       <Position8>
-        <Filename Value="../unitconverter.pas"/>
-        <Caret Line="709" TopLine="683"/>
+        <Filename Value="unitconvertertestcase.pas"/>
+        <Caret Line="433" Column="63" TopLine="415"/>
       </Position8>
       <Position9>
         <Filename Value="../unitconverter.pas"/>
-        <Caret Line="711" TopLine="683"/>
+        <Caret Line="647" TopLine="636"/>
       </Position9>
       <Position10>
         <Filename Value="unitconvertertestcase.pas"/>
-        <Caret Line="444" Column="60" TopLine="422"/>
+        <Caret Line="433" TopLine="415"/>
       </Position10>
       <Position11>
-        <Filename Value="unitconvertertestcase.pas"/>
-        <Caret Line="445" TopLine="422"/>
+        <Filename Value="../unitconverter.pas"/>
+        <Caret Line="647" TopLine="632"/>
       </Position11>
       <Position12>
         <Filename Value="../unitconverter.pas"/>
-        <Caret Line="700" TopLine="683"/>
+        <Caret Line="648" TopLine="632"/>
       </Position12>
       <Position13>
         <Filename Value="../unitconverter.pas"/>
-        <Caret Line="701" TopLine="683"/>
+        <Caret Line="661" TopLine="636"/>
       </Position13>
       <Position14>
-        <Filename Value="../unitconverter.pas"/>
-        <Caret Line="705" TopLine="683"/>
+        <Filename Value="unitconvertertestcase.pas"/>
+        <Caret Line="432" Column="50" TopLine="415"/>
       </Position14>
       <Position15>
         <Filename Value="../unitconverter.pas"/>
-        <Caret Line="565" TopLine="548"/>
+        <Caret Line="647" TopLine="638"/>
       </Position15>
       <Position16>
-        <Filename Value="../unitconverter.pas"/>
-        <Caret Line="566" TopLine="548"/>
+        <Filename Value="unitconvertertestcase.pas"/>
+        <Caret Line="433" TopLine="415"/>
       </Position16>
       <Position17>
         <Filename Value="../unitconverter.pas"/>
-        <Caret Line="706" TopLine="683"/>
+        <Caret Line="647" TopLine="638"/>
       </Position17>
       <Position18>
         <Filename Value="../unitconverter.pas"/>
-        <Caret Line="707" TopLine="683"/>
+        <Caret Line="648" TopLine="638"/>
       </Position18>
       <Position19>
         <Filename Value="../unitconverter.pas"/>
-        <Caret Line="208" Column="24" TopLine="191"/>
+        <Caret Line="661" TopLine="638"/>
       </Position19>
       <Position20>
-        <Filename Value="../unitconverter.pas"/>
-        <Caret Line="358" Column="68" TopLine="337"/>
+        <Filename Value="unitconvertertestcase.pas"/>
+        <Caret Line="432" Column="53" TopLine="415"/>
       </Position20>
       <Position21>
         <Filename Value="../unitconverter.pas"/>
-        <Caret Line="360" Column="23" TopLine="344"/>
+        <Caret Line="647" TopLine="638"/>
       </Position21>
       <Position22>
-        <Filename Value="../unitconverter.pas"/>
-        <Caret Line="361" Column="21" TopLine="344"/>
+        <Filename Value="unitconvertertestcase.pas"/>
+        <Caret Line="433" TopLine="415"/>
       </Position22>
       <Position23>
         <Filename Value="../unitconverter.pas"/>
-        <Caret Line="199" Column="21" TopLine="182"/>
+        <Caret Line="647" TopLine="638"/>
       </Position23>
       <Position24>
         <Filename Value="../unitconverter.pas"/>
-        <Caret Line="361" Column="21" TopLine="333"/>
+        <Caret Line="648" TopLine="638"/>
       </Position24>
       <Position25>
         <Filename Value="../unitconverter.pas"/>
-        <Caret Line="200" Column="21" TopLine="182"/>
+        <Caret Line="661" TopLine="638"/>
       </Position25>
       <Position26>
         <Filename Value="../unitconverter.pas"/>
-        <Caret Line="352" Column="21" TopLine="324"/>
+        <Caret Line="663" TopLine="638"/>
       </Position26>
       <Position27>
         <Filename Value="../unitconverter.pas"/>
-        <Caret Line="597" Column="55" TopLine="594"/>
+        <Caret Line="647" TopLine="625"/>
       </Position27>
       <Position28>
         <Filename Value="unitconvertertestcase.pas"/>
-        <Caret Line="446" Column="51" TopLine="425"/>
+        <Caret Line="432" Column="117" TopLine="416"/>
       </Position28>
       <Position29>
-        <Filename Value="../unitconverter.pas"/>
-        <Caret Line="597" Column="23" TopLine="584"/>
+        <Filename Value="unitconvertertestcase.pas"/>
+        <Caret Line="426" Column="44" TopLine="418"/>
       </Position29>
       <Position30>
         <Filename Value="../unitconverter.pas"/>
-        <Caret Line="467" Column="41" TopLine="442"/>
+        <Caret Line="161" TopLine="664"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
